--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "typecheck": "nuxt typecheck"
+    "typecheck": "nuxt typecheck",
+    "build:stocks": "node scripts/build-stocks.mjs"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.87",
