--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "typecheck": "nuxt typecheck",
-    "build:stocks": "node scripts/build-stocks.mjs"
+    "build:stocks": "node scripts/build-stocks.mjs",
+    "snowtype": "npx @snowplow/snowtype@latest generate"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.87",
     "@iconify-json/simple-icons": "^1.2.68",
     "@nuxt/ui": "^4.4.0",
+    "@snowplow/browser-plugin-performance-navigation-timing": "^4.4.0",
+    "@snowplow/browser-plugin-site-tracking": "^4.4.0",
+    "@snowplow/browser-plugin-snowplow-ecommerce": "^4.4.0",
+    "@snowplow/browser-tracker": "^4.4.0",
+    "@snowplow/signals-browser-plugin": "^0.2.1",
     "nuxt": "^4.3.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.13.0",
+    "@snowplow/snowtype": "^0.12.2",
     "eslint": "^9.39.2",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.2.4"
