Adding Vercel deployment config.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "leos-money-maker-nuxtjs",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
